--- a/.gitignore
+++ b/.gitignore
@@ -78,11 +78,11 @@ assets-and-models/voices/**/*.flac
 assets-and-models/generated/**/*
 !assets-and-models/generated/.gitkeep
 
-# XTTS embeddings and reference files
-assets-and-models/models/tts/xtts_embeddings/
+# XTTS embeddings - INCLUDED in Git (small files)
+# assets-and-models/models/tts/xtts_embeddings/ - INCLUDED
+
+# Voice datasets (large files - exclude from Git)
 assets-and-models/voices/dataset/
-**/xtts_reference*.wav
-**/xtts_embedding*.wav
 **/*_reference*.wav
 
 # Large archive files
